RESOLVED FIXED187263
50 failing WebDriver tests after r233417
https://bugs.webkit.org/show_bug.cgi?id=187263
Summary 50 failing WebDriver tests after r233417
Michael Catanzaro
Reported 2018-07-02 13:50:33 PDT
About 50 WebDriver tests started crashing after r233417. Would be good to investigate and resolve. I don't see how to get backtraces for WebDriver failures off the bots, unfortunately. Note: please don't roll out this commit, since we need it to avoid introducing more similar bugs. The tests would already have been crashing if built with GCC 7 or GCC 8, so this commit only served to reveal the bug on our bots that are running GCC 6.
Attachments
Patch (1.89 KB, patch)
2018-07-03 04:06 PDT, Carlos Garcia Campos
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (2.24 MB, application/zip)
2018-07-03 06:01 PDT, EWS Watchlist
no flags
Frédéric Wang Nélar
Comment 1 2018-07-03 00:03:43 PDT
I wonder whether this could be due to the crash in the network process (bug 187243). It seems to happen frequently as "Other crashes" when running WK2 layout tests (e.g. https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r233451%20(7099)/results.html)
Frédéric Wang Nélar
Comment 2 2018-07-03 01:08:02 PDT
(In reply to Frédéric Wang (:fredw) from comment #1) > I wonder whether this could be due to the crash in the network process (bug > 187243). It seems to happen frequently as "Other crashes" when running WK2 > layout tests (e.g. > https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/ > r233451%20(7099)/results.html) Running locally, I get a crash without the patch for bug 187243 and don't get any when I apply the patch. The tests still fail, but I've never run the webdriver tests before so I don't know whether my setup is correct.
Carlos Garcia Campos
Comment 3 2018-07-03 04:06:16 PDT
EWS Watchlist
Comment 4 2018-07-03 06:01:38 PDT
Comment on attachment 344175 [details] Patch Attachment 344175 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/8423287 New failing tests: animations/needs-layout.html
EWS Watchlist
Comment 5 2018-07-03 06:01:40 PDT
Created attachment 344179 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
WebKit Commit Bot
Comment 6 2018-07-04 00:43:27 PDT
Comment on attachment 344175 [details] Patch Clearing flags on attachment: 344175 Committed r233499: <https://trac.webkit.org/changeset/233499>
WebKit Commit Bot
Comment 7 2018-07-04 00:43:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2018-07-04 00:44:25 PDT
Blaze Burg
Comment 9 2018-07-05 09:12:55 PDT
d'oh, good catch!
Note You need to log in before you can comment on or make changes to this bug.