50 failing WebDriver tests after r233417 https://bugs.webkit.org/show_bug.cgi?id=187263

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2018-07-04
Reviewed by Frédéric Wang.

A std::optional value is used while being std::nullopt. This is because the wrong input source is used when
transitioning keyboard input states.

* UIProcess/Automation/SimulatedInputDispatcher.cpp:
(WebKit::SimulatedInputDispatcher::transitionInputSourceToState):

Canonical link: https://commits.webkit.org/202584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233499 268f45cc-cd09-0410-ab3c-d52691b4dbfc